--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </div>
         </div>
   
-        <div class="row">
+        <div class="row gap-3 gap-md-0">
           <div class="col-md-4 pt-3 pb-5 border border-dark-subtle rounded-2">
             <h2>Registrar empleado</h2>
             <form id="employee-form">
